// Code generated from <no value>. DO NOT EDIT.

syntax = "proto3";

option go_package = "github.com/joesonw/drlee/proto";
package proto;

message CallRequest {
    string Name = 1;
    bytes Body = 2;
    int64 TimeoutMilliseconds = 3;
    string NodeName = 4;
}

message CallResponse {
    string ID = 1;
    int64 TimestampNano = 2;
}

message BroadcastRequest {
    string Name = 1;
    bytes Body = 2;
    int64 TimeoutMilliseconds = 3;
    string NodeName = 4;
}

message BroadcastResponse {
    repeated string IDLst = 1;
    int64 TimestampNano = 2;
}

message ReplyRequest {
    string ID = 1;
    bytes Result = 2;
    int64 TimestampNano = 3;
    bool IsError = 4;
}

message ReplyResponse {
}

message DebugRequest {
    string Name = 1;
    bytes Body = 2;
}

message DebugResponse {
    bytes Body = 1;
}

service RPC {
    rpc RPCCall (CallRequest) returns (CallResponse) {
    }
    rpc RPCBroadcast(BroadcastRequest) returns (BroadcastResponse) {
    }
    rpc RPCReply (ReplyRequest) returns (ReplyResponse) {
    }
    rpc RPCDebug (DebugRequest) returns (DebugResponse) {
    }
    rpc RPCDebugStream (DebugRequest) returns (stream DebugResponse) {
    }
}
